[gd_scene load_steps=2 format=3 uid="uid://bmp8yuo3jkob4"]

[ext_resource type="Script" path="res://finish_area_component.gd" id="1_n2p64"]

[node name="FinalPage" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_n2p64")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(28.8248, 16.1801)
color = Color(0.168627, 0.168627, 0.168627, 0.803922)

[node name="GridContainer2" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.5
offset_right = 108.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "THANKS FOR PLAYING"

[node name="Label2" type="Label" parent="Control/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Try to find the diferent exits"

[node name="Label3" type="Label" parent="Control/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "The size of the ball matters"

[node name="Label4" type="Label" parent="Control/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Press [R] to restart"

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelSize" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "Final Size:"

[node name="LabelCoin" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "Final Coins Count:"

[node name="LabelTime" type="Label" parent="Control/GridContainer"]
layout_mode = 2
text = "Final Time:"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
